--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "test": "deno test --doc"
+    "test": "deno test --import-map=./_test_import_map.json --doc"
   },
   "fmt": {
     "files": {
